test/example/controller/error/handler/throw_from_query.js
module.exports = {
  get: async (controller) => {
    return await controller.model.test.error.throwFromQuery();
  }
}
